--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Luke Frisken <l.frisken@gmail.com>"]
 edition = "2018"
 description = "A wrapper around native-dialog for use with immediate mode gui libraries"
 repository = "https://github.com/kellpossible/im-native-dialog"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
